# Chatbot

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  chatbot.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: code_assistant.py  general_chat.py  rag_agent.py  specialized.py  web_search.py
backend/app/agents/tools/: __init__.py  arxiv_search.py  calculator.py  ddg_search.py  memory_search.py  stock_price.py  url_scraper.py  weather.py
backend/app/api/v1/: auth.py  chat.py  conversations.py  files.py  guest_chat.py  mcp.py  memory.py  router.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: base.py  redis.py  session.py
backend/app/graph/: graph.py  router.py  state.py
backend/app/graph/nodes/: hitl.py  memory_inject.py  memory_update.py  planner.py  reflection.py
backend/app/middleware/: rate_limit.py
backend/app/models/: conversation.py  memory.py  message.py  uploaded_file.py  user.py
backend/app/repositories/: base.py  user_repo.py
backend/app/services/: auth_service.py  file_service.py  mcp_service.py  memory_service.py  rag_service.py
backend/app/utils/: chunking.py  embeddings.py
backend/app/websocket/: handlers.py  manager.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useWebSocket.ts
frontend/lib/: api.ts  utils.ts
frontend/store/: index.ts
frontend/types/: index.ts
(+19 files in other folders)
